--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,8 @@
     <string name="menu_profile">Profile</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_fav">Favourites</string>
+    <string name="image_des">Image</string>
+    <string name="image_des_ic_share">Share</string>
+
+
 </resources>
