-> End of notifications

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,10 @@
     <string name="types_checkbox_tech">Technology</string>
     <string name="types_checkbox_business">Business</string>
     <string name="types_checkbox_entertainment">Entertainment</string>
-    <string name="message_subscribed">Subscribed Successfully</string>
-    <string name="message_subscribe_failed">Subscribed Failed</string>
+    <string name="message_subscribed">Subscribe Successful</string>
+    <string name="message_subscribe_failed">Subscribe Failed</string>
+    <string name="message_unsubscribed">Unsubscribe Successful</string>
+    <string name="message_unsubscribe_failed">Unsubscribe Failed</string>
+    <string name="health_notification">Health Notification</string>
 
 </resources>
