-> Translation and End of Projecttttttttttttttttttttttttttttttttt

--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -4,4 +4,37 @@
     <string name="enter_email">Insira Email</string>
     <string name="enter_password">Insira Password</string>
     <string name="enter_name">Insira Nome</string>
+    <string name="title_activity_home_page">PaginaPrincipal</string>
+    <string name="navigation_drawer_open">Abrir Nav Drawer</string>
+    <string name="navigation_drawer_close">Fechar Nav Drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Cabeçalho Navigation</string>
+    <string name="sign_out_string">Sair</string>
+    <string name="menu_home">Principal</string>
+    <string name="menu_breaking">Última Hora</string>
+    <string name="menu_entertainment">Entretenimento</string>
+    <string name="menu_business">Negócios</string>
+    <string name="menu_tech">Tecnologia</string>
+    <string name="menu_sports">Desporto</string>
+    <string name="menu_science">Ciência</string>
+    <string name="menu_health">Saúde</string>
+    <string name="menu_profile">Perfil</string>
+    <string name="menu_settings">Definições</string>
+    <string name="menu_fav">Favoritos</string>
+    <string name="image_des">Imagem</string>
+    <string name="image_des_ic_share">Partilhar</string>
+    <string name="types_update_btn_text">Atualizar</string>
+    <string name="types_checkbox_sport">Desporto</string>
+    <string name="types_title_text">Tipos de Notícia!</string>
+    <string name="types_checkbox_health">Saúde</string>
+    <string name="types_checkbox_science">Ciência</string>
+    <string name="types_checkbox_tech">Tecnologia</string>
+    <string name="types_checkbox_business">Negócios</string>
+    <string name="types_checkbox_entertainment">Entretenimento</string>
+    <string name="message_subscribed">Subscrito com Sucesso</string>
+    <string name="message_subscribe_failed">Subscrito com Falha</string>
+    <string name="message_unsubscribed">Não Subscrito com Sucesso</string>
+    <string name="message_unsubscribe_failed">Não Subscrito com Erro</string>
+    <string name="health_notification">Notificação Saúde</string>
 </resources>
